@@ -176,6 +176,7 @@ libcompzilla_la_SOURCES =				\
 	$(srcdir)/src/compzillaRenderingContext.cpp	\
 	$(srcdir)/src/compzillaWindow.h			\
 	$(srcdir)/src/compzillaWindow.cpp		\
+	$(srcdir)/src/Debug.h				\
 	$(srcdir)/src/nsKeycodes.h			\
 	$(srcdir)/src/XAtoms.h
 
